feat(player): controller, router, repository ...
