# src/v1/models/dto/response/player/GetPlayersResponse.ts
@@ -1,0 +1,7 @@
+
+import { BaseListResponse } from "../../../../../base/models/dto/response/BaseListResponse";
+import { GetPlayerByIdResponse } from "./GetPlayerByIdResponse";
+
+export class GetPlayersResponse extends BaseListResponse<GetPlayerByIdResponse> {
+
+}
